# NeoTUN

./: .gitignore  .gitmodules  ANDROID_BUILD_GUIDE.md  ANDROID_CRASH_FIX.md  ANDROID_ISSUE.md  ANDROID_XRAY_SETUP.md  ARCHITECTURE.md  BUILD.md  BUILD_APK_NOW.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CHANGELOG.md  CI_CD_IMPLEMENTATION_SUMMARY.md  CI_CD_SUMMARY.md  CMakeLists.txt  FIX_BUILD_NOW.md  GITHUB_RELEASE_NOTES.md  GITHUB_SECRETS_SETUP.md  GITHUB_SECRETS_UPDATE.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FUNCTIONALITY_UPDATE.md  INTEGRATION_CHECKLIST.md  INTEGRATION_SUMMARY.md  KEYSTORE_FIX.md  MVP_ROADMAP.md  NATIVE_LIBS_SETUP.md  PRE_COMMIT_CHECKLIST.md  QUICK_START.md  QUICK_START_ANDROID.md  README.md  REAL_VPN_IMPLEMENTATION.md  RELEASE_NOTES.md  SETUP_INSTRUCTIONS.md  TUN_MODE_GUIDE.md  USER_GUIDE.md  VPN_FUNCTIONALITY_STATUS.md  WHATS_NEW.md  WINDOWS_BUILD_FIX.md  app_update.json  build_native_libs.sh  (+15 more)
.github/: ANDROID_BUILD.md
.github/workflows/: android-ci.yml  android.yml  build.yml  release.yml  release.yml.disabled  windows-ci.yml  windows.yml
android/: build.gradle.kts  generate-wrapper.sh  gradle.properties  gradlew  gradlew.bat  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  proguard-rules.pro
android/app/libs/: README.md
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  bypass.c  bypass.h  bypass_jni.c  lwip_port.c  proxy_jni.c  socks5.c  socks5.h  tun_engine.c  tun_engine.h  utils.h
android/app/src/main/java/com/neotun/android/: MainActivity.kt  NeoTunApplication.kt
android/app/src/main/java/com/neotun/android/config/: UriParser.kt  XrayConfigGenerator.kt
android/app/src/main/java/com/neotun/android/database/: AppDatabase.kt  ProfileDao.kt  ProfileEntity.kt
android/app/src/main/java/com/neotun/android/models/: ConnectionState.kt  VpnProfile.kt
android/app/src/main/java/com/neotun/android/receiver/: BootReceiver.kt
android/app/src/main/java/com/neotun/android/repository/: ProfileRepository.kt
android/app/src/main/java/com/neotun/android/service/: NeoTunVpnService.kt
android/app/src/main/java/com/neotun/android/ui/screens/: AddProfileScreen.kt  LogsScreen.kt  MainScreen.kt  ProfilesScreen.kt
android/app/src/main/java/com/neotun/android/ui/theme/: Theme.kt  Type.kt
android/app/src/main/java/com/neotun/android/viewmodels/: MainViewModel.kt
android/app/src/main/java/com/neotun/dpi/: DpiVpnService.kt  MainActivity.kt  TProxyService.kt
android/app/src/main/jni/: Application.mk
android/app/src/main/jni/neotun_bypass/: Android.mk
android/app/src/main/jniLibs/: README.md
android/app/src/main/kotlin/com/neotun/app/: MainActivity.kt  TunVpnService.kt  V2rayCore.kt  V2rayVpnService.kt  VpnService.kt  XrayHelper.kt
android/app/src/main/res/anim/: anim_pulse.xml
android/app/src/main/res/drawable/: bg_button_active.xml  bg_button_idle.xml  bg_card.xml  bg_glow.xml  bg_glow_active.xml  bg_pill.xml  ic_launcher_foreground.xml  ic_shield.xml  ic_vpn.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-xhdpi/: ic_launcher_round.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
core/: bypass.c  gui.c  gui.h  main.c  socks5.c  utils.c  windivert_engine.c  windivert_engine.h
docs/: ANDROID_SETUP.md  BUILD.md  CI_CD_GUIDE.md  FEATURES.md  IMPLEMENTATION_GUIDE.md  SECURITY_CONSIDERATIONS.md
lib/: main.dart  main_simple.dart
lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_ru.dart  app_ru.arb
lib/models/: core_manifest.dart  core_type.dart  update_manifest.dart  vpn_config.dart
lib/screens/: config_editor_screen.dart  cores_screen.dart  home_screen.dart  qr_scanner_screen.dart  settings_screen.dart  splash_screen.dart  stats_screen.dart
lib/services/: auto_reconnect.dart  config_storage.dart  config_templates.dart  connection_tester.dart  core_manager.dart  cores_updater.dart  download_service.dart  libxray_downloader.dart  process_controller.dart  routing_manager.dart  subscription_parser.dart  system_proxy.dart  traffic_stats.dart  tun_manager.dart  update_service.dart  windows_proxy.dart  xray_android_service.dart  xray_downloader.dart  xray_service.dart  xray_windows_service.dart
lib/utils/: error_handler.dart  formatters.dart
lib/widgets/: connection_mode_selector.dart  speed_indicator.dart
scripts/: check-build-status.ps1  monitor-build.ps1  patch-hev-jni.py  verify-build.ps1  verify-build.sh
shared/core/config/: UriParser.kt  XrayConfigGenerator.kt
shared/core/interfaces/: ITunnelService.cs
shared/core/models/: ConnectionState.kt  VpnProfile.kt
shared/core/services/: XrayProcessManager.cs
test/: widget_test.dart
windows/: CMakeLists.txt  NeoTUN.sln  gui.py
windows/NeoTUN.Core/: NeoTUN.Core.csproj
windows/NeoTUN.Core/Config/: UriParser.cs  XrayConfigGenerator.cs
windows/NeoTUN.Core/Interfaces/: ITunnelService.cs
windows/NeoTUN.Core/Models/: ConnectionState.cs  VpnProfile.cs
windows/NeoTUN.Package/: NeoTUN.Package.wapproj  Package.appxmanifest
windows/NeoTUN.Package/Images/: .gitkeep
windows/NeoTUN.Package/Properties/PublishProfiles/: win10-x64.pubxml
windows/NeoTUN.Windows/: App.xaml  App.xaml.cs  NeoTUN.Windows.csproj  appsettings.json
windows/NeoTUN.Windows/Commands/: RelayCommand.cs
windows/NeoTUN.Windows/Dialogs/: ImportProfileDialog.xaml  ImportProfileDialog.xaml.cs
windows/NeoTUN.Windows/ViewModels/: MainViewModel.cs
windows/NeoTUN.Windows/Views/: MainWindow.xaml  MainWindow.xaml.cs
windows/runner/: Runner.rc  main.cpp
